ui and white space fixes

--- a/application/client/src/compnents/AppointmentRequestsPage.css
+++ b/application/client/src/compnents/AppointmentRequestsPage.css
@@ -31,7 +31,7 @@
     padding-bottom: 3px;
     border-bottom: 8px solid rgb(255, 220, 112);
     display: block;
-    margin: 0px auto 40px;
+    margin: 0px auto 20px;
     font-size: 45px;
     font-weight: 600;
     width: fit-content;
@@ -51,6 +51,7 @@
     display: flex;
     gap: 20px;
     margin-bottom: 30px;
+    padding-top: 5px;
 }
 
 .tab-item {
